layout bug fix and issue #239 #240

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,14 +14,16 @@
  *= require_self
  *= require jquery-ui/datepicker
  *= require animate
+ *= require owl.carousel
+ *= require owl.theme
  */
 
 
-/* -----slider------
- .slide-image{
+/* -----slider------  */
+ /*.slide-image{
    width:100% !important;
    height: 365px !important;
- }
+ }*/
 
  .city-img-postion{
    position: relative;
@@ -29,7 +31,7 @@
 
 .city-img-postion > div:first-of-type{
   position: absolute;
-  top:30%;
+  top:35%;
   left: 35%;
   z-index: 10;
   padding-top: 20px;
